# goldendict

./: CMakeLists.txt  btreeidx.hh  ftshelpers.hh  goldendict.pro  mediawiki.cc  webdict.cc  webdict.hh  zim.cc
application/: CMakeLists.txt  loaddictionaries.cc  loaddictionaries.hh  mainwindow.cc  mainwindow.hh
audio/: CMakeLists.txt
basic/: CMakeLists.txt  config.cc  config.hh
content/: CMakeLists.txt
dictionary/: CMakeLists.txt  aard.hh  dsl.cc
help/: CMakeLists.txt
index/: CMakeLists.txt  btreeidx.cc  chunkedstorage.cc  chunkedstorage.hh  dictionary.hh  ftsbasic.hh  ftshelpers.cc  ftshelpers.hh
locale/: CMakeLists.txt
model/: CMakeLists.txt
redist/: CMakeLists.txt
test/: CMakeLists.txt
test/test-basic/: CMakeLists.txt
test/test-content/: CMakeLists.txt  test_utf8.cpp
test/test-index/: CMakeLists.txt
translate/: CMakeLists.txt
ui/: CMakeLists.txt
view/: CMakeLists.txt  dictionarybar.hh  event.cc  event.hh  fulltextsearch.cc  fulltextsearch.hh
webdict/: CMakeLists.txt  mediawiki.cc
widget/: CMakeLists.txt
